[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprite/Ghost/Ghost1/Ghost1_2.png" type="Texture" id=1]
[ext_resource path="res://script/ghost/GhostU.gd" type="Script" id=2]
[ext_resource path="res://Sprite/Ghost/Ghost1/Ghost1_1.png" type="Texture" id=3]
[ext_resource path="res://Sprite/Ghost/Ghost1/Ghost1_3.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=2]
radius = 172.503

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.75, 30.25 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="GhostU" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 7
collision_mask = 7
script = ExtResource( 2 )

[node name="Ghost" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ghost"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Damageable"]]
position = Vector2( -1.25, 0.25 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
frame = 1
playing = true

[connection signal="body_entered" from="Ghost" to="." method="_on_Ghost_body_entered"]
[connection signal="body_exited" from="Ghost" to="." method="_on_Ghost_body_exited"]
